# metainfo-yaml2py

./: MANIFEST.in  README.md  metainfoyaml2py.py  pyproject.toml  requirements.txt  setup.cfg  standard_file_content.yaml
.github/workflows/: readme.yml
example/: __init__.py  example.py  example.schema.archive.yaml
example/example_schema_plugin/: nomad.yaml  pyproject.toml
example/example_schema_plugin/src/example_schema/: nomad_plugin.yaml  schema.py
example/example_schema_plugin/tests/data/: test_activity.archive.yaml  test_entity.archive.yaml
example/mbe_sige_example/: __init__.py  mbe_SiGe.schema.archive.yaml
example/nomad_example/: __init__.py  nomad_example.schema.archive.yaml
src/metainfoyaml2py/: metainfopy2yaml.py  metainfoyaml2py.py
src/metainfoyaml2py/resources/: standard_file_content.yaml
src/metainfoyaml2py/resources/standard_plugin_content/: pyproject.toml
src/metainfoyaml2py/resources/standard_plugin_content/src/plugin_name/: nomad_plugin.yaml
