[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metainfoyaml2py"
version = "0.0.1"
description = "A program for converting NOMAD metainfo YAML schemas into Python class definitions"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["nomad"]
authors = [
  {name = "Hampus Näsström", email = "hampus.naesstroem@physik.hu-berlin.de"},
]
maintainers = [
  {name = "Hampus Näsström", email = "hampus.naesstroem@physik.hu-berlin.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "autopep8>=1.7.0",
    "autoflake>=1.6.1",
    "PyYAML>=6.0",
]
[project.optional-dependencies]
dev = [
    "nomad-lab>=1.2.0-pre",
    "structlog",
]

[project.scripts]
metainfo-yaml2py = "metainfoyaml2py.metainfoyaml2py:main"

[tool.setuptools.packages.find]
where = ["src"]