[metadata]
name = metainfoyaml2py
version = 0.0.1
description = A program for converting NOMAD metainfo YAML schemas into Python class definitions
author = Hampus Näsström
license = Apache-2.0 license 
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    metainfoyaml2py
install_requires =
    autopep8>=1.7.0
    autoflake>=1.6.1
    PyYAML>=6.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no